--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@freckle/package-name",
+  "name": "@freckle/ajax",
   "version": "1.0.0",
-  "description": "TODO: Package description",
+  "description": "Freckle ajax helpers",
   "author": "Freckle",
   "license": "MIT",
   "main": "./dist/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/freckle/package-name-js.git"
+    "url": "git+https://github.com/freckle/ajax-js.git"
   },
   "scripts": {
     "build": "rm -r dist && tsc -d && node gen-flow.js",
@@ -15,11 +15,14 @@
     "format": "prettier --write 'src/**/*.ts'"
   },
   "dependencies": {
+    "@freckle/maybe": "https://github.com/freckle/maybe-js.git#v2.2.0",
+    "@freckle/parser": "https://github.com/freckle/parser-js.git#v1.3.2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/jest": "^28.1.1",
-    "@types/lodash": "^4.14.182",
+    "@types/jquery": "^3.5.16",
+    "@types/lodash": "^4.14.191",
     "cpy-cli": "3.1.1",
     "flow-bin": "0.110.0",
     "flowgen": "^1.17.0",
