--- a/package.json
+++ b/package.json
@@ -15,20 +15,19 @@
     "format": "prettier --write 'src/**/*.ts'"
   },
   "dependencies": {
-    "@freckle/maybe": "^2.1.0",
+    "@freckle/maybe": "^2.2.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.1",
-    "@types/jquery": "^3.5.16",
-    "@types/lodash": "^4.14.191",
-    "cpy-cli": "5.0.0",
-    "flow-bin": "0.110.0",
-    "flowgen": "^1.17.0",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^29.5.0",
+    "@types/jest": "^29.5.12",
+    "@types/jquery": "^3.5.30",
+    "@types/lodash": "^4.17.6",
+    "flow-bin": "^0.239.1",
+    "flowgen": "^1.21.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.2",
-    "ts-jest": "^28.0.4",
+    "ts-jest": "^29.2.0",
     "typescript": "^5.5.3"
   },
   "packageManager": "yarn@3.4.1"
