Remove flow from repo

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "url": "git+https://github.com/freckle/ajax-js.git"
   },
   "scripts": {
-    "build": "rm -r dist && tsc -d && node gen-flow.js",
-    "test": "jest && flow",
+    "build": "rm -r dist && tsc -d",
+    "test": "jest",
     "format": "prettier --write 'src/**/*.ts'"
   },
   "dependencies": {
@@ -22,9 +22,6 @@
     "@types/jest": "^29.5.12",
     "@types/jquery": "^3.5.16",
     "@types/lodash": "^4.14.191",
-    "cpy-cli": "5.0.0",
-    "flow-bin": "0.110.0",
-    "flowgen": "^1.17.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^3.3.2",
