--- a/renovate.json
+++ b/renovate.json
@@ -14,5 +14,6 @@
     "schedule:daily",
     "schedule:automergeDaily"
   ],
-  "minimumReleaseAge": "5 days"
+  "minimumReleaseAge": "5 days",
+  "platformAutomerge": false
 }
